# SAKIPRO

./: .env  README.md  main.py  pyproject.toml  sakipro.spec
.claude/memory/: MEMORY.md  cli_design_vision.md  project_overview.md
.github/workflows/: build-linux.yml  build-windows.yml
docs/: AGENT_SKILLS.md  AI_AGENT_TECHNICAL_DESIGN.md  AI_CONTRACT.md  CLI_BLUEPRINT.md  CLI_UX.md  ERROR_HANDLING.md  EXECUTIVE_SUMMARY.md  PACKAGING.md  PRD.md  PRIVACY.md  PROMPT_LIBRARY.md  README.md  RELEASE_CHECKLIST.md  SAKIP.md  SAKIPRO.md  SAKIP_RULEBOOK.md  SCOPE.md  STACK.md  TASK_MANAGEMENT.md  TEST_PLAN.md  TREE.md
output/: 20260529_073538_cek-indikator.docx  20260529_073538_cek-indikator.md  20260529_074848_cek-cascading.docx  20260529_074848_cek-cascading.md  20260529_074928_cek-cascading.docx  20260529_074928_cek-cascading.md  20260529_075052_cek-indikator.docx  20260529_075052_cek-indikator.md  20260529_075747_review-rpjmd.docx  20260529_075747_review-rpjmd.md  20260529_080451_review-rpjmd.docx  20260529_080451_review-rpjmd.md  20260529_080617_report.docx  20260529_080617_report.md  20260529_080713_cek-cascading.docx  20260529_080713_cek-cascading.md
sakip_docs/: .env
sakip_docs/output/: 20260529_084952_review-rpjmd.docx  20260529_084952_review-rpjmd.md  20260529_090051_review-rpjmd.docx  20260529_090051_review-rpjmd.md  20260529_090502_cek-indikator.docx  20260529_090502_cek-indikator.md  20260529_091157_review-rpjmd.docx  (+7 more)
scripts/: build_macos.sh  build_windows.ps1
test_docs/: dummy.txt
tests/: conftest.py  test_agents.py  test_models.py  test_writers.py
(+35 files in other folders)
